update car link

--- a/_posts/25-02-11-lab2.md
+++ b/_posts/25-02-11-lab2.md
@@ -176,7 +176,7 @@ void loop()
 # Stunt
 
 I found the motors had very high torque which allowed the robot flip if you change direction suddenly. The video below demonstrates this
-![Playing with RC car](/assets/img/car.gif)
+![Playing with RC car](assets/img/car.gif)
 
 Overall, I learnt a lot about how to combat a lot of the issues like noise and error compounding when using sensors in real life. It was cool 
 to see how well simple exponential moving averages are at smoothing out a signal. 
