--- a/_posts/25-03-04-lab3.md
+++ b/_posts/25-03-04-lab3.md
@@ -38,7 +38,7 @@ the XSHUT on one ToF and GPIO pin 2 on the Artemis.
 ![Scanning i2c addr](assets/img/i2c_addr.png)
 
 The picture above shows the Artemis detecting a device at I2C address of 0x29. This is not the expected 0x52; however, 
-0x52 is just 0x29 left shifted by one bit because the program ignores the read/write bit that is part of an I2C address. 
+0x52 is just 0x29 left shifted by one bit because the program ignores the read/write bit that is the LSB of an I2C address. 
 ## Data and Testing
 I decided to test the short distance mode because it was easier for me to verify that these readings
 were correct using a ruler. The short distance mode has a range of 0.05m - 1.3m. I then took 100 readings 
