--- a/_posts/25-03-11-lab5.md
+++ b/_posts/25-03-11-lab5.md
@@ -29,9 +29,9 @@ case START_ROBOT:
     success = robot_cmd.get_next_value(char_arr);
     if (success) kd = atof(char_arr);
 
-    PID = 1;
-
-    // Send back data
+    // Do pid
+    pid();
+    // Send back data after pid
     for (int i = 0; i < ARR_SIZE; i++){
         tx_estring_value.clear();
 
@@ -55,11 +55,12 @@ def readdata(uuid, bytearray):
 
 # P control
 I started out with just P control which just drives the motor input proportionally to the position error. Also, I set the sensor mode to short 
-because I was always testing < 1.4m of distance and this would allow for the quickest measurments. 
+because I was always testing < 1.4m of distance and this would allow for the quickest measurments. I additionally added a hard stop 
+of 5s while testing, so I didn't think I needed to account for bluetooth disconnect (which wouldn't work with this kind of loop). 
 
 ```cpp
-void loop(){
-    // check bluetooth connected
+void pid(){
+    
     while (start_time + 10000 > millis()){ // run for 10s at max
         // PID calculations
         if (!get_sensor_data()){
@@ -111,8 +112,8 @@ Next, I tried 0.05 which I found significantly reduced oscillations, but it also
 ![tof data](assets/img/tof005.png)
 ![tof data](assets/img/pwm005.png)
 ![car gif](assets/img/kp005.gif)
-# Speed discussion
 
+# Speed discussion
 Without extrapolation, my code would run at 50 Hz because the ToF sensor was a bottleneck. With the extrapolation (shown in the earlier code block), 
 the loop runs at roughly 155 Hz so every 3 iterations I receive a new ToF reading. I think this causes a decent amount of the oscillation when the 
 error is low because the simple linear extrapolation overshoots the target. 
