--- a/_posts/25-03-11-lab5.md
+++ b/_posts/25-03-11-lab5.md
@@ -102,6 +102,7 @@ Testing with Kp = 0.5,
 
 ![tof data](assets/img/tof_data_l5.png)
 ![tof data](assets/img/pwm.png)
+![car gif](assets/img/kp05.gif)
 
 Clearly 0.5 is too high leading to very high oscillations. 
 
@@ -109,7 +110,7 @@ Next, I tried 0.05 which I found significantly reduced oscillations, but it also
 
 ![tof data](assets/img/tof005.png)
 ![tof data](assets/img/pwm005.png)
-
+![car gif](assets/img/kp005.gif)
 # Speed discussion
 
 Without extrapolation, my code would run at 50 Hz because the ToF sensor was a bottleneck. With the extrapolation (shown in the earlier code block), 
@@ -117,7 +118,9 @@ the loop runs at roughly 155 Hz so every 3 iterations I receive a new ToF readin
 error is low because the simple linear extrapolation overshoots the target. 
 
 
-
+# Discussion
+I found that for this kind of linear control even P control produces a good controller. Also, in hindsight I think my minimum PWM setting was a little high 
+which could have been another possible reason for getting the slight oscillations even with a Kp of 0.05.
 
 
 
